syntax = "proto3";
package hello;

service Say {
  //function Send can be called in server.rs file
  rpc Send (SayRequest) returns (SayResponse);
  //stream SayResponse, to return stream messages
  rpc SendStream(SayRequest) returns (stream SayResponse);
}

message SayRequest {
  string name = 1;
}

message SayResponse {
  string message = 1;
}
